--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@ h4 {background-color:lightgray; color:#3d3d3d}
 
 h5 {background-color:lightgray; color:#3d3d3d}
 
+hr {background-color:lightgray; color:#3d3d3d; border:2px solid gray;}
+
 a:link{background-color:lightgray; color:#ff784f}
 
 a:visited{background-color:lightgray; color:#a63e29}
