--- a/css/master.css
+++ b/css/master.css
@@ -10,19 +10,8 @@ img {
   width:100%;
   height:auto;
 }
-.box {
-    background-color:inherit;
-    padding:40px;
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap:20px;
-}
-
 .menu {
   background-color:inherit;
-  grid-row: 1;
-  grid-column: 1/4;
   font-family: "Courier New", Helvetica, sans-serif;
   padding:0px;
   margin:0px;
@@ -30,16 +19,13 @@ img {
   list-style-type: none;
   align-self: center;
 }
-
 .menu .activemenu {
   background-color: #505050;
 }
-
 .menu .activemenu:hover {
   color:white;
   background-color: darkblue;
 }
-
 .list {
   display: grid;
   list-style-type: none;
@@ -51,7 +37,6 @@ img {
   font-size: 20px;
   border-width:0px;
 }
-
 ul {
   list-style-type: none;
   margin:0px;
@@ -64,11 +49,9 @@ ul {
   position:relative;
   width:100%;
 }
-
 li {
   float:left;
 }
-
 li a {
   display:block;
   width:auto;
@@ -77,28 +60,51 @@ li a {
   text-align:center;
   text-decoration: none;
 }
-
 li a:hover {
   background-color: darkblue;
   color:white;
-
 }
 a:link {
   background-color:grey;
   color:#ff784f
 }
-
 a:visited {
   background-color:grey;
   color:#a63e29
 }
-
 a:hover {
   font-style:italic;
   color:white;
   background-color:darkblue;
 }
-
+h1 {
+  text-align: center;
+  font-family: Verdana, "Noto Sans";
+  font-size: 60px;
+}
+h3 {
+  font-family: Verdana, "Noto Sans";
+  font-size: 30px;
+}
+hr {
+  color: black;
+  background-color: black;
+  border-radius: 5px;
+  width: 75%;
+  height: 5px;
+  border:2px solid black;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+p {}
+.box {
+    background-color:inherit;
+    padding:40px;
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap:20px;
+}
 .left {
   background-color:black;
   grid-row: 1/4;
@@ -106,17 +112,21 @@ a:hover {
   padding:30px;
   height:auto;
 }
-
 .right {
   background-color:grey;
   grid-row: 1/4;
   grid-column: 2/4;
   padding:30px;
 }
+.middle {
+  background-color: grey;
+  grid-row: 1/4;
+  grid-column: 1/4;
+  padding: 40px 70px 70px 100px;
+  margin: 60px;
 }
-
+}
 @media screen and (max-width:399px) {
-
 body {
   background-color:white;
 }
@@ -132,7 +142,6 @@ img {
     grid-template-rows:175px 1fr 1fr;
     gap:5px;
 }
-
 .menu {
   background-color:inherit;
   grid-row: 1;
@@ -143,16 +152,13 @@ img {
   font-size: 30px;
   list-style-type: none;
 }
-
 ul {
   list-style-type: none;
   margin:0px;
   padding:0px;
   background-color: inherit;
   border-color: black;
-
 }
-
 li a {
   display:block;
   width:auto;
@@ -162,22 +168,18 @@ li a {
   border-style: inset;
   text-align:center;
 }
-
 li a:hover {
   background-color: darkblue;
   color:white;
-
 }
 a:link {
   background-color:grey;
   color:#ff784f
 }
-
 a:visited {
   background-color:grey;
   color:#a63e29
 }
-
 a:hover {
   font-style:italic;
   color:white;
@@ -190,7 +192,6 @@ a:hover {
   padding:30px;
   margin:auto;
 }
-
 .right {
   background-color:grey;
   grid-row: 3;
