--- a/css/master.css
+++ b/css/master.css
@@ -96,7 +96,6 @@ hr {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-p {}
 .box {
     background-color:inherit;
     padding:40px;
@@ -129,44 +128,63 @@ p {}
 @media screen and (max-width:399px) {
 body {
   background-color:white;
+  margin:0px;
+  max-width: 100%;
 }
 img {
   width:100%;
   height:auto;
 }
-.box {
-    background-color:inherit;
-    padding:5px;
-    display:grid;
-    grid-template-columns: 1fr;
-    grid-template-rows:175px 1fr 1fr;
-    gap:5px;
-}
 .menu {
   background-color:inherit;
-  grid-row: 1;
-  grid-column: 1;
   font-family: "Courier New", Helvetica, sans-serif;
   padding:0px;
-  margin:5px;
+  margin:0px;
   font-size: 30px;
   list-style-type: none;
+  align-self: center;
+  position:fixed;
+}
+.menu .activemenu {
+  background-color: #505050;
+}
+.menu .activemenu:hover {
+  color:white;
+  background-color: darkblue;
+}
+.list {
+  display: grid;
+  list-style-type: none;
+  list-style-position: outside;
+  background-color:inherit;
+  font-family: Helvetica, sans-serif;
+  padding:0px;
+  margin:30px;
+  font-size: 20px;
+  border-width:0px;
 }
 ul {
   list-style-type: none;
   margin:0px;
   padding:0px;
-  background-color: inherit;
+  overflow:hidden;
+  background-color: grey;
   border-color: black;
+  border-style: inset;
+  border-width:5px;
+  position:relative;
+  width:100%;
+}
+li {
+  float:left;
 }
 li a {
   display:block;
   width:auto;
   background-color: grey;
-  border-color: black;
-  border-radius: 25px;
-  border-style: inset;
+  padding:10px 15px 10px 15px;
   text-align:center;
+  text-decoration: none;
 }
 li a:hover {
   background-color: darkblue;
@@ -185,17 +203,52 @@ a:hover {
   color:white;
   background-color:darkblue;
 }
+h1 {
+  text-align: center;
+  font-family: Verdana, "Noto Sans";
+  font-size: 60px;
+}
+h3 {
+  font-family: Verdana, "Noto Sans";
+  font-size: 30px;
+}
+hr {
+  color: black;
+  background-color: black;
+  border-radius: 5px;
+  width: 75%;
+  height: 5px;
+  border:2px solid black;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  }
+.box {
+    background-color:inherit;
+    padding:40px;
+    display:grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap:20px;
+}
 .left {
   background-color:black;
-  grid-row: 2;
+  grid-row: 1;
   grid-column: 1;
   padding:30px;
-  margin:auto;
+  height:auto;
 }
 .right {
   background-color:grey;
-  grid-row: 3;
+  grid-row: 2;
   grid-column: 1;
   padding:30px;
+  height:auto;
+}
+.middle {
+  background-color: grey;
+  grid-row: 1/4;
+  grid-column: 1;
+  padding: 40px 70px 70px 100px;
+  margin: 60px;
 }
 }
