--- a/css/week12-demo.css
+++ b/css/week12-demo.css
@@ -11,8 +11,8 @@ html {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  background-color: #4287f5;
+  font-family: "Courier New", Helvetica, sans-serif;
+  background-color: darkblue;
 }
 
 .app {
@@ -28,8 +28,9 @@ body {
 
 header {
   width: 100%;
+  background-color: grey;
   font-size: 30px;
-  text-align: center;
+  text-align:center;
   padding: 10px;
   border-bottom: 1px solid #ebebeb;
 }
@@ -41,6 +42,7 @@ header {
 
 .quote-text {
   padding-bottom: 20px;
+  font-style: normal;
   font-size: 25px;
   color: black;
 }
@@ -52,9 +54,9 @@ header {
 
 .button {
   display: block;
-  color: white;
+  color: black;
   border-radius: 4px;
-  border: none;
+  border-color: black;
   padding: 10px 20px;
   cursor: pointer;
   text-align: center;
@@ -64,12 +66,14 @@ header {
 }
 
 .new-quote {
-  background-color: #4A2B0F;
+  background-color: grey;
   margin-bottom: 15px;
 }
 
 .new-quote:hover {
-  background-color: #6d3b0e;
+  background-color: darkblue;
+  font-style: oblique;
+  color: white;
 }
 
 .new-quote:disabled {
