--- a/css/test.css
+++ b/css/test.css
@@ -1,14 +1,149 @@
 @media screen and (min-width:400px) {
 
 body {
-  background-color:white;
+  background-color:blue;
   margin:0px;
   max-width: 100%;
   overflow-x: hidden;
 }
-img {
+.menu {
+  background-color:blue;
+  font-family: Helvetica, sans-serif;
+  padding:0px;
+  margin:0px;
+  font-size: 30px;
+  list-style-type: none;
+  align-self: center;
+}
+.menu .activemenu {
+  background-color: #6A6A6A;
+}
+.menu .activemenu:hover {
+  color:#5FF8FF;
+  background-color: darkblue;
+}
+.list {
+  display: grid;
+  list-style-type: none;
+  list-style-position: outside;
+  background-color:inherit;
+  font-family: Helvetica, sans-serif;
+  padding:0px;
+  margin:30px;
+  font-size: 20px;
+  border-width:0px;
+}
+.menu ul {
+  list-style-type: none;
+  margin:0px;
+  padding:0px;
+  overflow:hidden;
+  background-color: grey;
+  border-color: black;
+  border-style: inset;
+  border-width:5px;
+  position:relative;
   width:100%;
+}
+.nav li {
+  float:left;
+}
+.nav li a {
+  display:block;
+  width:auto;
+  background-color: grey;
+  padding:10px 15px 10px 15px;
+  text-align:center;
+  text-decoration: none;
+}
+.nav li a:hover {
+  background-color: darkblue;
+  color: #5FF8FF;
+}
+a:link {
+  background-color:grey;
+  color:#7637FF;
+}
+a:visited {
+  background-color:grey;
+  color:#7637FF;
+}
+a:hover {
+  font-style:italic;
+  color:#5FF8FF;
+  background-color:darkblue;
+}
+.container {
+  height: 100px;
+}
+h1 {
+  text-align: center;
+  font-family: Verdana, "Noto Sans";
+  font-size: 60px;
+}
+h3 {
+  font-family: Verdana, "Noto Sans";
+  font-size: 30px;
+}
+hr {
+  color: black;
+  background-color: black;
+  border-radius: 5px;
+  width: 75%;
+  height: 5px;
+  border:2px solid black;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+.box {
+    background-color:inherit;
+    padding:40px;
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap:20px;
+}
+.left {
+  background-color:black;
+  grid-row: 1/4;
+  grid-column: 1;
+  padding:30px;
   height:auto;
+}
+.right {
+  background-color:grey;
+  grid-row: 1/4;
+  grid-column: 2/4;
+  padding:30px;
+}
+.middle {
+  background-color: grey;
+  grid-row: 1/4;
+  grid-column: 1/4;
+  padding: 40px 70px 70px 100px;
+  margin: 60px;
+}
+button {
+  transition: all 100ms ease-in-out;
+  font-size: 40px;
+}
+#image-1 {
+  width:20%;
+}
+.was-clicked {
+  padding: 20px;
+  color: red;
+}
+
+#image-1.was-entered {
+  width: 50%;
+}
+}
+@media screen and (max-width:399px) {
+body {
+  background-color:white;
+  margin:0px;
+  max-width: 100%;
 }
 .menu {
   background-color:inherit;
@@ -18,6 +153,7 @@ img {
   font-size: 30px;
   list-style-type: none;
   align-self: center;
+  position:fixed;
 }
 .menu .activemenu {
   background-color: #505050;
@@ -95,160 +231,34 @@ hr {
   border:2px solid black;
   margin-top: 50px;
   margin-bottom: 50px;
-}
+  }
 .box {
     background-color:inherit;
     padding:40px;
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     gap:20px;
 }
 .left {
   background-color:black;
-  grid-row: 1/4;
+  grid-row: 1;
   grid-column: 1;
   padding:30px;
   height:auto;
 }
 .right {
   background-color:grey;
-  grid-row: 1/4;
-  grid-column: 2/4;
+  grid-row: 2;
+  grid-column: 1;
   padding:30px;
+  height:auto;
 }
 .middle {
   background-color: grey;
   grid-row: 1/4;
-  grid-column: 1/4;
+  grid-column: 1;
   padding: 40px 70px 70px 100px;
   margin: 60px;
 }
-}
-@media screen and (max-width:399px) {
-
-  body {
-    background-color:white;
-    margin:0px;
-    max-width: 100%;
-    overflow-x: hidden;
-  }
-  img {
-    width:100%;
-    height:auto;
-  }
-  .menu {
-    background-color:inherit;
-    font-family: "Courier New", Helvetica, sans-serif;
-    padding:0px;
-    margin:0px;
-    font-size: 30px;
-    list-style-type: none;
-    align-self: center;
-  }
-  .menu .activemenu {
-    background-color: #505050;
-  }
-  .menu .activemenu:hover {
-    color:white;
-    background-color: darkblue;
-  }
-  .list {
-    display: grid;
-    list-style-type: none;
-    list-style-position: outside;
-    background-color:inherit;
-    font-family: Helvetica, sans-serif;
-    padding:0px;
-    margin:30px;
-    font-size: 20px;
-    border-width:0px;
-  }
-  ul {
-    list-style-type: none;
-    margin:0px;
-    padding:0px;
-    overflow:hidden;
-    background-color: grey;
-    border-color: black;
-    border-style: inset;
-    border-width:5px;
-    position:relative;
-    width:100%;
-  }
-  li {
-    float:left;
-  }
-  li a {
-    display:block;
-    width:auto;
-    background-color: grey;
-    padding:10px 15px 10px 15px;
-    text-align:center;
-    text-decoration: none;
-  }
-  li a:hover {
-    background-color: darkblue;
-    color:white;
-  }
-  a:link {
-    background-color:grey;
-    color:#ff784f
-  }
-  a:visited {
-    background-color:grey;
-    color:#a63e29
-  }
-  a:hover {
-    font-style:italic;
-    color:white;
-    background-color:darkblue;
-  }
-  h1 {
-    text-align: center;
-    font-family: Verdana, "Noto Sans";
-    font-size: 60px;
-  }
-  h3 {
-    font-family: Verdana, "Noto Sans";
-    font-size: 30px;
-  }
-  hr {
-    color: black;
-    background-color: black;
-    border-radius: 5px;
-    width: 75%;
-    height: 5px;
-    border:2px solid black;
-    margin-top: 50px;
-    margin-bottom: 50px;
-  }
-  .box {
-      background-color:inherit;
-      padding:40px;
-      display:grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr;
-      gap:20px;
-  }
-  .left {
-    background-color:black;
-    grid-row: 1/4;
-    grid-column: 1;
-    padding:30px;
-    height:auto;
-  }
-  .right {
-    background-color:grey;
-    grid-row: 1/4;
-    grid-column: 2/4;
-    padding:30px;
-  }
-  .middle {
-    background-color: grey;
-    grid-row: 1/4;
-    grid-column: 1/4;
-    padding: 40px 70px 70px 100px;
-    margin: 60px;
-  }
 }
