--- a/css/gallery.css
+++ b/css/gallery.css
@@ -82,10 +82,74 @@ a:hover {
    overflow:hidden;
  }
 .container .carousel {
-  width: 300px;
-  margin: 100px auto 0;
+  align-items: center;
+  width: 500px;
+  margin: 50px auto 0;
   overflow: visible;
 }
 .carousel img {
-  -webkit-box-reflect: below 20px linear-gradient(rgba(255,255,255,0.1),rgba(255,255,255,0.3));
+  -webkit-box-reflect: below 20px linear-gradient(rgba(255,255,255,0.1),rgba(255,255,255,0.4));
+}
+.app {
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 600px;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+}
+header {
+  width: 100%;
+  background-color: grey;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 30px;
+  text-align:center;
+  border-bottom: 1px solid #ebebeb;
+}
+p {
+  background-color: grey;
+}
+.quotes {
+  padding: 20px 50px;
+  min-height: 150px;
+}
+.quote-text {
+  padding-bottom: 20px;
+  font-style: normal;
+  font-size: 25px;
+  color: black;
+}
+.controls {
+  align-items: center;
+  margin: 30px;
+  padding-bottom: 20px;
+}
+.button {
+  display: block;
+  color: black;
+  border-radius: 4px;
+  border-color: black;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  cursor: pointer;
+  text-align: center;
+  width: 100%;
+  font-size: 20px;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+}
+.new-quote {
+  background-color: grey;
+  margin-bottom: 15px;
+}
+.new-quote:hover {
+  background-color: darkblue;
+  font-style: oblique;
+  color: #5FF8FF;
+}
+.new-quote:disabled {
+  background-color: #cccccc;
+  color: #666666;
+  cursor: not-allowed;
 }
